--- a/Rpharma2023/slides/RPharma2023.qmd
+++ b/Rpharma2023/slides/RPharma2023.qmd
@@ -23,14 +23,15 @@ date: 10/25/2023
 }
 </style>
 ```
-
 -   Introduction & Updates[10 min; Juliane Manitz]{.dim}\
-    *past*, *present* & *future*
+
 -   Repositories Workstream [10 min; Coline Zeballos]{.dim}\
 
-Slides Available!
+::: {style="font-size: 1.5em;"}
+***Slides Available!***
+:::
 
-[pharmar.github.io/events-positconf2023](https://pharmar.github.io/events-positconf2023)
+[pharmar.github.io/events-Rpharma2023](https://pharmar.github.io/events-Rpharma2023)
 
 # 👋 Who We Are {transition="none-in slide-out"}
 
@@ -74,152 +75,154 @@ Slides Available!
 }
 </style>
 ```
-
-::: { style="font-size: 0.7em;" }
-> The ***R Validation Hub*** is a collaboration to support the adoption of R
-> within a biopharmaceutical regulatory setting ([pharmaR.org](https://www.pharmaR.org))
+::: {style="font-size: 0.7em;"}
+> The ***R Validation Hub*** is a collaboration to support the adoption of R within a biopharmaceutical regulatory setting ([pharmaR.org](https://www.pharmaR.org))
 :::
 
-* R Consortium Working Group which grew out of **R/Pharma 2018**
-* Led by participants from **~10 organizations**
-* With frequent involvement from health authorities
-* And subscribers from **~60 organizations** spanning multiple industries
+-   R Consortium Working Group which grew out of **R/Pharma 2018**
 
-* New R validation hub lead is Doug Kelkhoff
+-   Led by participants from **\~10 organizations**
 
-## 👷‍♂️ What We Do ([pharmaR.org](https://www.pharmaR.org)) {transition="slide-in slide-out"}
+-   With frequent involvement from health authorities
 
-::::: {.columns}
-:::: {.column width="29%" .panel}
-#### White Paper
-Guidance on compliant use of R and management of packages
+-   And subscribers from **\~60 organizations** spanning multiple industries
 
-::: {.person}
-Andy Nicholls et al.
-:::
-::::
-
-:::: {.column width="29%" .panel}
-#### [New!]{.badge-pill} Repositories
-
-Building a public, validation-ready resource for R packages  
-
-::: {.person}
-Coline Zeballos
-:::
-::::
-
-:::: {.column width="29%" .panel}
-#### [New!]{.badge-pill} Communications
-
-Connecting validation experts across the industry
-
-::: {.person}
-Juliane Manitz
-:::
-::::
-:::::
-
-::::: {.columns}
-:::: {.column width="29%" .panel}
-#### [`{riskmetric}`](https://github.com/pharmaR/riskmetric)
-
-Gather and report on risk heuristics to support validation decision-making
-
-::: {.person}
-Eric Milliman
-:::
-::::
-
-:::: {.column width="29%" .panel}
-#### [`{riskassessment}`](https://github.com/pharmaR/riskassessment)
-
-A web interface to `{riskmetric}`, supporting review,
-annotation and cataloging of decisions
-
-::: {.person}
-Aaron Clark
-:::
-::::
-
-:::: {.column width="29%" .panel}
-#### [New!]{.badge-pill} [`{riskscore}`](https://github.com/pharmaR/riskscore)
-
-An R data package capturing risk metrics across all of CRAN
-
-::: {.person}
-Aaron Clark
-:::
-::::
-:::::
 
 <!-- Updates -------------------------------------------------------------------- -->
 
 # 📣 Updates {transition="slide-in none"}
+
+## 👷‍♂️ New Opportunities
+
+* New R validation hub lead is Doug Kelkhoff
+* More ways to get involved
+
+::: columns
+::: {.column .panel width="29%"}
+#### White Paper
+
+Guidance on compliant use of R and management of packages
+
+::: person
+Andy Nicholls et al.
+:::
+:::
+
+::: {.column .panel width="29%"}
+#### [New!]{.badge-pill} Communications
+
+Connecting validation experts across the industry
+
+::: person
+Juliane Manitz
+:::
+:::
+:::
+
+::: {.column .panel width="29%"}
+#### [New!]{.badge-pill} Repositories
+
+Building a public, validation-ready resource for R packages
+
+::: person
+Coline Zeballos
+:::
+:::
+
+::: columns
+::: {.column .panel width="29%"}
+#### [`{riskmetric}`](https://github.com/pharmaR/riskmetric)
+
+Gather and report on risk heuristics to support validation decision-making
+
+::: person
+Eric Milliman
+:::
+:::
+
+::: {.column .panel width="29%"}
+#### [`{riskassessment}`](https://github.com/pharmaR/riskassessment)
+
+A web interface to `{riskmetric}`, supporting review, annotation and cataloging of decisions
+
+::: person
+Aaron Clark
+:::
+:::
+
+::: {.column .panel width="29%"}
+#### [New!]{.badge-pill} [`{riskscore}`](https://github.com/pharmaR/riskscore)
+
+An R data package capturing risk metrics across all of CRAN
+
+::: person
+Aaron Clark
+:::
+:::
+:::
 
 ## 🗝 Key Policy Updates!
 
 > If nothing else, take this home!
 
 -   The FDA appears to accept `.R` files through their eSUB portal[^1] .
--   The FDA has released a draft of a new *Computer Software
-    Assurance*[^2] guideline that seems to be increasingly the basis for
-    their evaluation of R.
+-   The FDA has released a draft of a new *Computer Software Assurance*[^2] guideline that seems to be increasingly the basis for their evaluation of R.
 
-[^1]: [R Consortium R Submission WG, Pilot
-    #1](https://github.com/RConsortium/submissions-pilot1)
+[^1]: [R Consortium R Submission WG, Pilot #1](https://github.com/RConsortium/submissions-pilot1)
 
-[^2]: [*Computer Software Assurance for Production and Quality Systems
-    Software: Draft Guidance for Industry and Food and Drug
-    Administration Staff*](https://www.fda.gov/media/161521/download)
+[^2]: [*Computer Software Assurance for Production and Quality Systems Software: Draft Guidance for Industry and Food and Drug Administration Staff*](https://www.fda.gov/media/161521/download)
 
-## 🤝 Affiliate: ![](assets/camis.png){height="1.2em" width="1.2em" style="margin: 0 0.2em; border-radius: 50%; object-fit: cover; background: #CBC; vertical-align: middle;"} PSI/AIMS (CAMIS) {transition="slide-in slide-out"}
+## 🤝 Affiliate: CAMIS ![](assets/camis.png){height="1.2em" width="1.2em" style="margin: 0 0.2em; border-radius: 50%; object-fit: cover; background: #CBC; vertical-align: middle;"} {transition="slide-in slide-out"}
 
-::::: {.columns}
-:::: {.column width="65%"}
-::: { style="font-size: 0.6em;" }
-> **C**omparing **A**nalysis **M**ethod **I**mplementations in **S**oftware  
-> A cross-industry group formed of members from PHUSE, PSI, and ASA.
+::: {style="font-size: 1em;"}
+> **C**omparing **A**nalysis **M**ethod **I**mplementations in **S**oftware
 :::
 
-::: { style="font-size: 0.7em;" }
-- Released a [white paper](https://phuse.s3.eu-central-1.amazonaws.com/Deliverables/Data+Visualisation+%26+Open+Source+Technology/WP077.pdf) providing guidance on appropriate use of stats methods, for example: 
-   * Don't default to the defaults
-   * Be specific when drafting analysis plans, including precise methods & options 
-- Currently building a repository of methods comparisons at 
-  [psiaims.github.io/CAMIS](https://psiaims.github.io/CAMIS/).
-- Check out their 
-  [contributors page](https://psiaims.github.io/CAMIS/contribution.html) to 
-  learn how you can get involved!
-:::
-::::
+::: columns
+::: {.column width="65%"}
 
-:::: {.column width="35%"}
+::: {style="font-size: 0.8em;"}
+-   A cross-industry group formed of members from PHUSE, PSI, and ASA.
+-   Released a [white paper](https://phuse.s3.eu-central-1.amazonaws.com/Deliverables/Data+Visualisation+%26+Open+Source+Technology/WP077.pdf) providing guidance on appropriate use of stats methods, e.g.
+
+    -   Don't default to the defaults
+    -   Be specific when drafting analysis plans, including precise methods & options
+
+-   Currently building a repository of methods comparisons at [psiaims.github.io/CAMIS](https://psiaims.github.io/CAMIS/).
+
+-   Check out their [contributors page](https://psiaims.github.io/CAMIS/contribution.html) to learn how you can get involved!
+:::
+:::
+
+::: {.column width="35%"}
 ![](assets/CAMIS-white-paper.png)
-::::
-:::::
+:::
+:::
 
 
 # 📜 Workstream Report
+
 
 ## [Case Studies](https://www.pharmar.org/casestudies/)
 
 > 7 Companies Shared their Approach to Package Validation
 
-::: {.columns style="font-size: 0.7em;"}
+::: {.columns style="font-size: 0.8em;"}
 ::: {.column width="33%"}
 #### Commonalities
 
 -   Categorized risk (hi/med/lo)
 -   Heavily weight unit testing
--   Base & Suggested packages "trusted"
+-   Base & recommended packages "trusted"
 :::
 
 ::: {.column width="33%"}
 #### Differences
 
--   Risk stratification (eg coverage cutoff)
+-   Risk stratification, e.g, coverage cutoff
+
 -   Managing risk
+
     -   human-in-the-middle review
     -   restricted package subset
     -   adding bespoke testing
@@ -236,258 +239,130 @@ Aaron Clark
 
 ## ![](assets/riskmetric.png){height="1.8em" width="1.8em" style="margin: 0 0.2em; object-fit: contain;vertical-align: middle;"} `{riskmetric}` Roadmap
 
-::: {style="font-size:0.8em"}
+::: {.incremental style="font-size: 0.8em;"}
 -   **Ease of use:**\
-    Wrapper functions for a a complete workflow, prettier outputs
+    Wrapper functions for a complete workflow, prettier outputs
 -   **Metric completeness:**\
-    Implement metrics for as many pacakge sources as possible. Chain
-    sources together to create more complete assessments
+    Implement metrics for as many package sources as possible. Chain sources together to create more complete assessments
 -   **Modular addititions:**\
-    Allow users to easy add custom assessments, create optional
-    assessments based on community packages (e.g. `oyster`, `srr`,
-    `pkgstats`, etc)
+    Allow users to easy add custom assessments, create optional assessments based on community packages, e.g. `oysteR`, `srr`, `pkgstats`
 -   **Focusing on metrics and scoring:**\
-    Making custom weighting more robust and convenient. Guidance
-    materials on weighting specific assessments based on community
-    feedback and our own views on best practices.
+    Making custom weighting more robust and convenient. Guidance materials on weighting specific assessments based on community feedback and our own views on best practices.
 :::
 
 ## ![](assets/riskassessment.png){height="1.8em" width="1.8em" style="margin: 0 0.2em; object-fit: contain;vertical-align: middle;"} `{riskassessment}` App
 
-### Feature Recap
+> “Best App” Award at Shiny Conf 2023
 
--   Face lifts for *Report Builder* & *Database View*
--   Better dependency inspection
--   Org-level customizations using config file
--   Allow `admin` user role management
--   Package file explorer
+::: {.incremental style="font-size: 0.8em;"}
 
-## ![](assets/riskassessment.png){height="1.8em" width="1.8em" style="margin: 0 0.2em; object-fit: contain;vertical-align: middle;"} `{riskassessment}` App
 
-#### New Test explorer! (Code provided by *GSK*)
+-   **Face lifts:** \
+    Improved *Report Builder* & *Database View*. Better dependency inspection
 
-![](assets/riskassessment-file-browser.png){.r-stretch .center
-style="display: block; margin: auto;"}
+-   **Admin tools:**\
+    Org-level customization using `config` file. Allow `admin` user role management
+
+-   **Source file explorer** (original code provided by *GSK*):\
+    Allows to browse test files with brand-new add-on to browse help and source code of a function in the same module
+
+-   **Automatic risk sssessment:**\
+    Write custom code to automatically categorize packages into low/medium/high risk
+
+:::
+
+Check out the [Risk Assessment Demo App](https://rinpharma.shinyapps.io/riskassessment)
+
 
 <!-- Repo -------------------------------------------------------------------- -->
-
 
 # 📦 Repositories
 
 ## Repositories Workstream
 
-::: { style="font-size: 0.8em;" }
-> Supporting a transparent, open, dynamic, cross-industry approach of
-> establishing and maintaining a _repository_ of R packages.
+::: {style="font-size: 0.8em;"}
+> Supporting a transparent, open, dynamic, cross-industry approach of establishing and maintaining a *repository* of R packages.
 
-* Taking ample time to engage stakeholders
-  * Validation leads across the industry
-  * Active health authority involvement
-  * Analytic environment admins and developers
-* Considering the possibilities
-  * Mapping needs to solutions that meet the industry where it is
-  * ...while building the path for it to move forward
+-   Taking ample time to engage stakeholders
+
+    -   Validation leads across the industry
+    -   Active health authority involvement
+    -   Analytic environment admins and developers
+
+-   Considering the possibilities
+
+    -   Mapping needs to solutions that meet the industry where it is
+    -   ...while building the path for it to move forward
 :::
-
 
 ## How did we get here?
 
 ::: {.incremental style="font-size: 0.8em;"}
-* [Our whitepaper is widely adopted]{.fragment .semi-fade-out}
-* [But implementing it is inconsistent & laborious]{.fragment .semi-fade-out}   
-  * [Variations throughout industry pose uncertainty]{.fragment .semi-fade-out}
-  * [Sharing software with health authorities is a challenge]{.fragment .semi-fade-out}
-  * [Health authorities, overwhelmed by technical inconsistencies, are more likely to question software use]{.fragment .semi-fade-out}
-* We feel the most productive path forward is a shared ecosystem
+-   [Our whitepaper is widely adopted]{.fragment .semi-fade-out}
+
+-   [But implementing it is inconsistent & laborious]{.fragment .semi-fade-out}
+
+    -   [Variations throughout industry pose uncertainty]{.fragment .semi-fade-out}
+    -   [Sharing software with health authorities is a challenge]{.fragment .semi-fade-out}
+    -   [Health authorities, overwhelmed by technical inconsistencies, are more likely to question software use]{.fragment .semi-fade-out}
+
+-   We feel the most productive path forward is a shared ecosystem
 :::
 
-::: {.notes}
-- **inconsistent**: Vendored choices inevitably face inconsistency when
-  merged with internally developed tools
-- **sharing**: `pkglite`, `.R` files now permitted, Hosting on git repo/r-universe? But comes with extra install steps.
-- **laborious**: We're all reviewing the same tools, duplicating effort and
+::: notes
+-   **inconsistent**: Vendored choices inevitably face inconsistency when merged with internally developed tools
+-   **sharing**: `pkglite`, `.R` files now permitted, Hosting on git repo/r-universe? But comes with extra install steps.
+-   **laborious**: We're all reviewing the same tools, duplicating effort and
 :::
-
 
 ## Work to-date
 
 **Building consensus in package evaluation and distribution...**
 
-0. Who needs a repository anyways?
-1. Stakeholder engagement [3mo]{.dim}  
-2. Product refinement and proof-of-concept planning [1mo]{.dim}
-3. POC development [2mo]{.dim}
-
-
-## ✋ Hold up! Why a repository?
-
-> "Every successful team starts with a small existential crisis"  
->  -- _unknown_
-
-- Tools for building evaluation in-house?
-- Sharing of extra testing resources?
-- Curation of packages?
-- A stricter CRAN?
-
-
-## Interesting Stakeholder Findings
-
-- Health authority primary concerns
-  - Avoiding **security vulnerabilities** while using R
-  - Visible discussions **vetting methodology** and relevance
-- Industry validation leads
-  - Relieved that open-source tools are public, less need to audit
-    vendored tools
-- System administrators, users and developers
-  - Want **clarity** and **consistency** internally and externally
-
-
-## Prototyping
-
-Running three prototypes to explore specific needs
-
-- Test case exchange format ([repo](https://github.com/kkmann/rmes/pulls))
-- Communication channels for methods discussion & considerations ([google doc](https://docs.google.com/presentation/d/1b9VZjVM1pzzSmrO7WFKK43EjBZMT0smRrNY_0BPSR0s/edit#slide=id.g1e4f3a104ee_0_0))
-- Risk filters and transparency of known vulnerabilities ([repo](https://github.com/dgkf/rvalhub-repo-filters-mvp))
-
-
-## Prototyping
-### Test Case Exchange Format
-
-```json
-{
-  "rPackage": {
-    "name": "stats",
-    "link": "https://cran.r-project.org/package=stats"
-  },
-  "CSADocPkg": {
-    "function": {
-      "name": "t.test",
-      "assuranceActivity": {
-        "activityType": "Scripted Testing: Robust",
-        "definition": "Scripted testing efforts in which the risk of the computer system or automation includes evidence of repeatability, traceability to requirements, and auditability.",
-        "parameters": {
-          "testObjectives": [
-            {
-              "uuid": "6cde1b0f-3e41-4878-8cd5-79c87be88a7d",
-              "objective": "Verify that p values produced by stats::t.test are uniformly distributed",
-              "keywords": ["t.test", "p values", "uniform distribution"],
-              "testCases": [
-                {
-                  "uuid": "4fa03a8d-2e39-4866-9cd3-69b77bd78a6b",
-                  "testName": "t test produces calibrated p values",
-                  "description": "This test checks that the p values produced by stats::t.test do not deviate substantially from the expected uniform distribution.",
-                  "code": "set.seed(42)\\nm <- 100\\nfor (n in c(5, 50, 500)) {\\n# repeatedly sample data under null and record p value\\nres <- numeric(m)\\nfor (i in 1:m) {\\nres[i] <- t.test(rnorm(n))$p.value\\n}\\n# expect non significant result\\nexpect_true(\\nks.test(res, 'punif')$p.value > 0.05\\n)\\n}",
-                  "result": "pass",
-                  "environment": {
-                    "container": "rocker/tidyverse:4.3.1",
-                    "runtime": "singularity",
-                    "runtimeVersion": "3.8",
-                    "renvLockfile": ""
-                  }
-                }
-  ...
-```
-
-## Prototyping 
-### Communication Channels
-
-![](assets/rvalhub-comm-channels.svg)
-
-
-## Prototyping 
-### Package Security & Risk Filters
-
-```r
-install.packages("options")
-#> Security vulnerabilities found in packages to be installed.
-#> To proceed with installation, re-run with `accept_vulnerabilities = TRUE`
-#> 
-#> ── Vulnerability overview ──
-#> 
-#> ℹ 1 package was scanned
-#> ℹ 1 package was found in the Sonatype database
-#> ℹ 1 package had known vulnerability
-#> ℹ A total of 1 known vulnerability was identified
-#> ℹ See https://github.com/sonatype-nexus-community/oysteR/ for details.
-```
-
-```r
-nrow(available.packages())
-#> 5 "low risk" packages
-
-options(available_packages_filters = NULL)
-nrow(available.packages())
-#> 17 available packages
-```
-
-
-## A fork in the road
-
-Given the key capabilities and tools to address them. How do we bundle
-these solution to address industry needs?
-
-:::: {.columns style="font-size: 0.7em;"}
-::: {.column .fragment width="50%"}
-**Support our industry today**
-
-> _Delivering in-house solutions for you to pick-and-choose_
-
-- Consistent processes to apply
-- Local tools to deploy in-house
-- Community forum for knowledge sharing
-:::
-
-::: {.column .fragment width="50%"}
-**Build what we want the industry to be**
-
-> _Drive change through transparency and consistency_
-
-- Lead by example with a public solution
-- Make it easier to adopt than re-build
-- Transparency-first solutions
-:::
-::::
+0.  Who needs a repository anyways?
+1.  Stakeholder engagement [3mo]{.dim}\
+2.  Product refinement and proof-of-concept planning [1mo]{.dim}
+3.  POC development [2mo]{.dim}
 
 
 ## What does a solution look like? {visibility="hidden"}
 
-::: {.callout-note}
+::: callout-note
 ## If it's not broke, don't fix it!
 :::
 
 ::: {.incremental style="font-size: 0.8em;"}
-- R has this wonderful thing called CRAN, setting the standard of quality
-  - Packages are constantly tested together
-  - R has a culture of amazing documentation
-  - Statisticians flock to R, and are constantly vetting its implementations
+-   R has this wonderful thing called CRAN, setting the standard of quality
+
+    -   Packages are constantly tested together
+    -   R has a culture of amazing documentation
+    -   Statisticians flock to R, and are constantly vetting its implementations
 :::
 
-
 ## What does a solution look like? {visibility="hidden"}
-::: {.callout-warning}
+
+::: callout-warning
 ## Fool me twice, shame on me
 :::
 
 ::: {.incremental style="font-size: 0.8em;"}
-- R has this thorn in its side called CRAN, 
-  - Builds are difficult to reproduce (key for validation)
-  - Quality indicators are lacking
-  - Difficult to roll back to an older snapshot (although tools exist to help with this.)
-  - Governance isn't always the most friendly
-:::
+-   R has this thorn in its side called CRAN,
 
+    -   Builds are difficult to reproduce (key for validation)
+    -   Quality indicators are lacking
+    -   Difficult to roll back to an older snapshot (although tools exist to help with this.)
+    -   Governance isn't always the most friendly
+:::
 
 ## What does a solution look like?
 
-::: {.callout-tip}
+::: callout-tip
 ## Closing the CRAN gap for the Pharma Use Case
 :::
 
-- Reproducibility guidelines
-- Standard, public assessment of packages
-- Avenues for communicating about implementations, bugs, security
-
+-   Reproducibility guidelines
+-   Standard, public assessment of packages
+-   Avenues for communicating about implementations, bugs, security
 
 ## The Proposal so Far
 
@@ -502,30 +377,28 @@ these solution to address industry needs?
 }
 </style>
 ```
-
-- [***A "Golden" Base Image***]{.highlight}  
-  to establish ground truth for testing.
-- [***Rethinking requirements***]{.highlight}  
-  testing, external vetting (CRAN) and adoption are sufficient for _Scripted 
-  Testing_ needs - are new requirements necessary?  
-- [***Expectations of Public Communication***]{.highlight}  
-  industry-standard communication channels.
-- [***Nearly all meaningful assessment can be automated***]{.highlight}  
-  edge cases (malicious code, methods debate) are better handled by 
-  transparent community engagement.
+-   [***A "Golden" Base Image***]{.highlight}\
+    to establish ground truth for testing.
+-   [***Rethinking requirements***]{.highlight}\
+    testing, external vetting (CRAN) and adoption are sufficient for *Scripted Testing* needs - are new requirements necessary?\
+-   [***Expectations of Public Communication***]{.highlight}\
+    industry-standard communication channels.
+-   [***Nearly all meaningful assessment can be automated***]{.highlight}\
+    edge cases (malicious code, methods debate) are better handled by transparent community engagement.
 
 ## The Proposal so Far
 
 ![](assets/repository-diagram.svg){.r-stretch .center style="display: block; margin: auto"}
 
+## Join the R validation Hub!
 
+-   More info on [pharmaR.org](https://www.pharmaR.org) and [github](https://github.com/pharmaR)
 
-# Join the R validation Hub! 
+-   Get on the [mailing list](https://www.pharmar.org/contribute/)
 
-* Get on the [Mailing List](https://www.pharmar.org/contribute/)
-* Contribute to a Working Group
-* Help with the {riskmetric} R Package or the The Risk Assessment Application
+-   Contribute to a working group
 
+-   Help with the development of tools
 
 ::: columns
 ::: {.column width="30%"}
